# libre-timecode-programmer

./: Cargo.toml  README.md  flake.nix  package.json  pnpm-lock.yaml  vite.config.js
.direnv/: flake-profile-1-link  flake-profile-2-link  flake-profile-8-link
src/: app.css  app.html  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: main_app.rs  mod.rs  seek_bar.rs  seek_bar.svelte
src/components/cue_viewer/: cue.rs  mod.rs
src/routes/: +page.svelte
