[package]
name = "libre-timecode-programmer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95" # Error handeling 
clap = { version = "4.5.27", features = [
  "derive",
] } # CLI arg parsing - will prob be removed
rodio = "0.20.1" # Audio playback
iced = "0.13.1" # UI Lib
percentage = "0.1.0"
vtc = "0.1.13"
[dependencies.uuid]
version = "1.13.1"
features = [
  "v4",                # Lets you generate random UUIDs
  "fast-rng",          # Use a faster (but still sufficiently random) RNG
  "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
